# flow-agent

./: .gitignore  README.md  linkedin-article.md  pyproject.toml
docs/: phased-plan.md  spec.md
flowagent/: __init__.py  engine.py  errors.py  prompt_builder.py  state_executor.py  state_store.py  tool.py  transition.py  types.py  validation.py
flowagent/adapters/: __init__.py  base.py
tests/: conftest.py  test_engine.py  test_errors.py  test_prompt_builder.py  test_state_executor.py  test_state_store.py  test_tool.py  test_transition.py  test_validation.py
